--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <title>Netflix</title>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js" defer></script>
+        <!--<script src="script.js" defer></script>-->
+        <script src="script.js" ></script>
     </head>
 
     <body>
